cleaning up whitespace

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ lib-cov
 *.out
 *.pid
 *.gz
+*.iml
 
 pids
 logs
@@ -13,6 +14,7 @@ results
 .idea
 
 npm-debug.log
+package-lock.json
 node_modules
 testing.js
 test/localConfig.json
